# Climb_ros2

./: .gitignore  alpine to-do.md
base_controllers/: climbingrobot_controller2_real_ros2.py  (+2 more)
cl_arganello_interface/: CMakeLists.txt
cl_arganello_interface/cl_arganello_interface/: alpine_odometry_node.py  jump.py  position_control_logger.py  position_step_test.py  record_experiment.sh  telemetry_node.py
cl_arganello_interface/config/: winch_position_gains.yaml
cl_arganello_interface/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
cl_arganello_interface/install/cl_arganello_interface/lib/cl_arganello_interface/: alpine_odometry_node.py  dongle_node.py  friction_estimator.py  telemetry_node.py
cl_arganello_interface/install/cl_arganello_interface/share/cl_arganello_interface/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
cl_arganello_interface/install/cl_arganello_interface/share/cl_arganello_interface/cmake/: ament_cmake_export_include_directories-extras.cmake  cl_arganello_interfaceConfig.cmake  cl_arganello_interface__rosidl_typesupport_cExport-noconfig.cmake  cl_arganello_interface__rosidl_typesupport_cExport.cmake  cl_arganello_interface__rosidl_typesupport_cppExport-noconfig.cmake  cl_arganello_interface__rosidl_typesupport_cppExport.cmake  cl_arganello_interface__rosidl_typesupport_introspection_cExport-noconfig.cmake  cl_arganello_interface__rosidl_typesupport_introspection_cExport.cmake  cl_arganello_interface__rosidl_typesupport_introspection_cppExport-noconfig.cmake  cl_arganello_interface__rosidl_typesupport_introspection_cppExport.cmake  export_cl_arganello_interface__rosidl_generator_cExport-noconfig.cmake  export_cl_arganello_interface__rosidl_generator_cExport.cmake  export_cl_arganello_interface__rosidl_generator_cppExport.cmake  export_cl_arganello_interface__rosidl_generator_pyExport.cmake  export_cl_arganello_interface__rosidl_typesupport_fastrtps_cExport.cmake  rosidl_cmake_aggregate_target-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
cl_arganello_interface/install/cl_arganello_interface/share/cl_arganello_interface/environment/: ament_prefix_path.sh  path.sh
cl_arganello_interface/install/cl_arganello_interface/share/cl_arganello_interface/launch/: alpine_low_level_bringup.launch.py  interface_launch.py
cl_arganello_interface/install/cl_arganello_interface/share/cl_arganello_interface/msg/: RopeTelemetry.idl
cl_arganello_interface/install/cl_arganello_interface/share/cl_arganello_interface/srv/: RopeControlMode_Response.msg
cl_arganello_interface/launch/: alpine_low_level_bringup.launch.py  climbingrobot_controller2_real_ros2.launch.py  climbingrobot_controller2_real_ros2.py  homing.py  homing_procedure.py
cl_arganello_interface/log/: latest_build
climbingrobot_description/: CMakeLists.txt  README_ROS2_CONVERSION.txt  package.xml
climbingrobot_description/gazebo/: gazebo.urdf.xacro
climbingrobot_description/launch/: rviz.launch.py  rviz_common.launch.py  rviz_paper.launch.py  rviz_paper_landing.launch.py  rviz_paper_landing_no_wheels.launch.py  upload.launch.py  upload_and_rviz.launch.py
climbingrobot_description/rviz/: conf.rviz  conf_paper_landing_no_wheels.rviz  conf_paper_tro_bottom.rviz
(+55 files in other folders)
