<?xml version="1.0"?>
<package format="3">
  <name>climbingrobot_description</name>
  <version>0.0.1</version>
  <description>climbingrobot Description Package</description>

  <maintainer email="X@Y.it">XX</maintainer>
  <license>BSD-3</license>
  <author email="X@Y.it">XX</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
